--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,32 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
+/* Make terminal container fill parent and scrollable */
+#terminal {
+  width: 100%;
+  height: 50%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+#terminal .xterm {
+  height: 50%;
+  width: 100%;
+}
+
+#terminal .xterm-viewport {
+  overflow-y: scroll !important;
+  background: #000505;
 }
 
 /* Target the scrollbar inside xterm */
@@ -14,10 +40,10 @@
 }
 
 #terminal .xterm-viewport::-webkit-scrollbar-track {
-  background: #1e1e1e; 
+  background: #1e1e1e;
 }
 
 #terminal .xterm-viewport::-webkit-scrollbar-thumb {
-  background-color: #00ff00;
+  background-color: #00a300;
   border-radius: 4px;
 }
