--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,3 +76,7 @@ body {
 .ace_gutter::-webkit-scrollbar-thumb {
   background: rgba(255, 255, 255, 0.08);
 }
+
+::-webkit-scrollbar {
+  width: 2px;
+}
